@@ -16,6 +16,7 @@ field-name-limit: 20
 stylesheet-dirs: docutils/writers/html5_polyglot/
 stylesheet-path: minimal.css, responsive.css
 section-self-link: yes
+table-style: colwidths-grid
 
 # Prevent tools/buildhtml.py from processing certain text files.
 [buildhtml application]
